# plao-pos-collector

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example_future_settings.toml
docs/: DESIGN.md  SCHEMA.md
ops/sync/: sync_plao_pos_to_arena.sh
ops/systemd/: plao_collect.service
src/plao/: __init__.py  cli_collect.py  cli_report.py  io.py  schema.py
tests/: conftest.py  test_iter_jsonl_no_file.py  test_jsonl_writer_context.py  test_min_emit_interval.py  test_report_metadata.py  test_smoke.py  test_ttl_cleanup.py  test_utc_filename.py
tests/fixtures/: pos_small.jsonl
