[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plao"
version = "0.1.0"
description = "PLAO: Raspberry Pi POS JSONL logger"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "PLAO Contributors"}]
keywords = ["adsb", "jsonl", "raspberry-pi", "logger"]

[project.scripts]
plao-collect = "plao.cli_collect:main"
plao-report = "plao.cli_report:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["plao"]

[tool.ruff]
line-length = 100
